more fix for overflow

--- a/docs/css/styles/messages.css
+++ b/docs/css/styles/messages.css
@@ -19,6 +19,7 @@ body {
     padding: 3rem;
     justify-items: center;
     min-height: 300px;
+    flex-wrap: wrap;
 }
 
 #greetings {
